package com.av.finance.account.domain.transaction;

public enum TransactionType {
    INITIAL,
    DEPOSIT,
    TRANSFER,
    WITHDRAW
}
